# SAMYPlugins_Templates

./: .gitignore  CMakeLists.txt  Makefile  README.md  SAMYPlugin_Template.c  SAMYPlugin_Template.h  main.c
.github/: CI_sketch.md  CI_sketch.txt
.github/actions/: CI_SAMYPlugin_Template_python.yml  build_linux.yaml  run_SAMYTemplate_cpp.yaml
.github/actions/build_linux/: action.yaml
.github/workflows/: build_all_linux.yaml  code_scanning.yaml
ClientTest/: CMakeLists.txt  client.c
ClientTest/OPCUA_CRCL/OPCUAModel/: Readme.m
ClientTest/OPCUA_CRCL/model/Published/: CRCL.NodeSet2.xml  CRCL.Types.bsd
OPCUA_Python/: README.TXT
OPCUA_Python/FreeOPCUA_fixed_stack/common/: structures.py
Robot/: Robot.c
Robot/include/: Robot.h
SAMYPlugIn_Base/: .gitignore  CMakeLists.txt  Readme.m  SAMYPlugin_Template.cpp  SAMYPlugin_Template.hpp  main.cpp  main_SubscribeUADP.c
SAMYPlugIn_Base/Common/: Publisher.cpp  SAMYRobot.cpp  Subscriber.cpp
SAMYPlugIn_Base/Common/include/: Publisher.hpp  SAMYRobot.hpp  Subscriber.hpp  Temporal_DataTypes.hpp
SAMYPlugIn_Base/DataTypes/: namespace_crcl_opcua_generated.c  types_crcl_opcua_generated.c
SAMYPlugIn_Base/DataTypes/include/: crcl_opcua_nodeids.h  types_crcl_opcua_generated.h  types_crcl_opcua_generated_encoding_binary.h  types_crcl_opcua_generated_handling.h
SAMYPlugIn_Base/PythonRobot/: PythonRobot.cpp
SAMYPlugIn_Base/PythonRobot/include/: PythonRobot.hpp
SAMYPlugIn_Base/Robot/: Robot.cpp
SAMYPlugIn_Base/Robot/include/: Robot.hpp
SAMYPlugIn_Base/Template_internals/Robot/: Robot.c
SAMYPlugIn_Base/Template_internals/Robot/include/: Robot.h
SAMYPlugIn_Base/test_main_files/: main.c  main_PublishUADP.c  main_Publish_MQTT_Skill.c  main_Publish_MQTT_Skill_original.c  main_SubscribeMQTT.c  main_minimal.c
SAMYPlugins_Template_Cpp/: .gitignore  CMakeLists.txt  Dockerfile  SAMYPlugin_Template.c  SAMYPlugin_Template.h  main.c  main.cpp
SAMYPlugins_Template_Cpp/Plugin/: plugin.cpp
SAMYPlugins_Template_Cpp/Plugin/include/: plugin.h
SAMYPlugins_Template_Cpp/Robot/: Robot.c  robot.cpp
SAMYPlugins_Template_Cpp/Robot/include/: Robot.h  robot.h
SAMYPlugins_Template_Cpp/Template_internals/Helpers/: helpers.c  helpers.cpp
SAMYPlugins_Template_Cpp/Template_internals/Helpers/include/: helpers.h  signals.h
SAMYPlugins_Template_Cpp/Template_internals/OPCUA_CRCL/OPCUAModel/: CompileModel.sh
SAMYPlugins_Template_Cpp/Template_internals/OPCUA_CRCL/OPCUAModel/Published/CRCL/: CRCL.PredefinedNodes.uanodes
SAMYPlugins_Template_Cpp/Template_internals/OPCUA_CRCL/model/Published/: CRCL.NodeSet.xml  CRCL.xml
SAMYPlugins_Template_Python/: Dockerfile  README.md  main.py  message_log.txt  plugin.py  setup.cfg  setup.py  tests.py
SAMYPlugins_Template_Python/OPCUA_CRCL/OPCUAModel/: CRCL_Examples.xml
SAMYPlugins_Template_Python/OPCUA_CRCL/model/Published/: CRCL.DataTypes.cs  CRCL.PredefinedNodes.xml
SAMYPlugins_Template_Python/Plugin/: plugin.py
SAMYPlugins_Template_Python/RobotLib/: robot.py
SAMYPlugins_Template_Python/opcua/opcua/common/: subscription.py
SAMYPlugins_Template_Python/samyplugin/: CRCL_DataTypes.py  plugin.py  settings.py
SAMYPlugins_Template_Python/samyplugin/transform/: transform.py
SAMYPlugins_Template_Python/src/samyplugin/: plugin.py
SAMYPlugins_Template_Python/src/samyplugin.egg-info/: PKG-INFO  SOURCES.txt
SAMYPlugins_Template_Python/src/transform/: transform.py
SAMYPlugins_Template_Python/tests/: README.md  docker-compose.yaml  main.py  message_log.txt  testclient.py  testplugin.py  tests.py
SAMYPlugins_Template_Python/tests/robot/: robot.py
SAMYPlugins_Template_Python/tests/testConfig/: DataBaseFile.yaml  InformationSources.yaml  RobotsConfiguration.yaml  SAMYCoreConfig.yaml  Skills.yaml  start.sh
SAMYPlugins_Template_Python/tests/testConfig/Skills/MoveToSkill/: MoveTo.cpp  MoveTo.h  SkillConfig.yaml
SAMYPlugins_Template_Python/tests/testConfig/Skills/PickAndPlaceSkill/: PickAndPlace.cpp  PickAndPlace.h  SkillConfig.yaml
SAMYPlugins_Template_Python/tests/testConfig/Skills/Skill_1/: CMakeLists.txt  SkillConfig.yaml  Skill_1.cpp  Skill_1.h
SamyPlugins_Template_Cpp/: CMakeLists.txt
SamyPlugins_Template_Cpp/src/Helpers/include/: signals.h
SamyPlugins_Template_Cpp/src/OPCUA_CRCL/OPCUAModel/Published/CRCL/: CRCL.Constants.cs  CRCL.Types.bsd
SamyPlugins_Template_Cpp/src/OPCUA_CRCL/model/Published/: CRCL.DataTypes.cs  CRCL.Types.bsd  CRCL.Types.xsd
SamyPlugins_Template_Cpp/src/Plugin/: plugin.cpp
SamyPlugins_Template_Cpp/src/Plugin/include/: plugin.h
SamyPlugins_Template_Cpp/src/Robot/: main.cpp  robot.cpp
SamyPlugins_Template_Cpp/src/Robot/include/: robot.h
SamyPlugins_Template_Cpp/src/Tests/CRCLnamespace_tests/: testsClient.cpp
Template_internals/Communication/: Publisher.c  SAMYRobot.c  Subscriber.c
Template_internals/Communication/include/: Publisher.h  SAMYRobot.h  Subscriber.h
Template_internals/Helpers/: helpers.c
Template_internals/Helpers/include/: helpers.h
Template_internals/OPCUA_CRCL/OPCUAModel/: CRCL.xml  CRCL_OPCUA.xml  CompileModel.sh
Template_internals/OPCUA_CRCL/model/: CRCL.xml
Template_internals/OPCUA_CRCL/model/Published/: CRCL.Classes.cs  CRCL.Constants.cs  CRCL.DataTypes.cs  CRCL.NodeSet.xml  CRCL.NodeSet2.xml  CRCL.NodeSet2_orig.xml  CRCL.PredefinedNodes.uanodes  CRCL.PredefinedNodes.xml  CRCL.Types.bsd  CRCL.Types.xsd  CRCL.csv  CRCL_OPCUA.csv
open62541_PR/: CMakeLists.txt
open62541_PR/examples/custom_datatype/: CMakeLists.txt
open62541_PR/tools/nodeset_compiler/: backend_open62541_datatypes.py  backend_open62541_typedefinitions.py  type_parser.py
open62541_with_unions_modification/: diff.txt  map.txt
open62541_with_unions_modification/src/: ua_types.c  ua_types_encoding_binary.c
open62541_with_unions_modification/src/pubsub/: ua_pubsub_networkmessage_json.c
open62541_with_unions_modification/tools/cmake/: SetGitBasedVersion.cmake  macros_public.cmake
test_main_files/: main_PublishMQTT.c  main_Publish_MQTT_Skill_original _2.c  main_test_SAMYRobot.c
tools/: ci.sh
(+20 files in other folders)
