[metadata]
name = samyplugin
version = 0.0.1
author = Felix Leber
author_email = leber@technikum-wien.at
description = Samy plugin package.
long_description = file: README.md
long_description_content_type = text/markdown
url = none
project_urls =
    Bug Tracker = none
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
